<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ASLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaSeniorFragment">

    <EditText
        android:id="@+id/etNomeAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="109dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="@string/data"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etBairroAS"
        app:layout_constraintStart_toStartOf="@+id/etNomeAS"
        app:layout_constraintTop_toTopOf="@+id/etNomeAS" />

    <EditText
        android:id="@+id/etBairroAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cbSimAS"
        app:layout_constraintStart_toStartOf="@+id/etDataAS" />

    <TextView
        android:id="@+id/tvProbAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="9dp"
        android:text="@string/problema"
        app:layout_constraintBottom_toBottomOf="@+id/cbSimAS"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbSimAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="59dp"
        android:text="@string/sim"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAS"
        app:layout_constraintStart_toEndOf="@+id/tvProbAS" />

    <Button
        android:id="@+id/btnCadastrarAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="43dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toTopOf="@+id/tvResultadoAS"
        app:layout_constraintEnd_toStartOf="@+id/cbSimAS" />

    <TextView
        android:id="@+id/tvResultadoAS"
        android:layout_width="0dp"
        android:layout_height="147dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
