<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AOLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaOutrosFragment">

    <EditText
        android:id="@+id/etNomeAO"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataAO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBairroAO"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAcademiaAO"
        app:layout_constraintStart_toStartOf="@+id/etDataAO"
        app:layout_constraintTop_toBottomOf="@+id/etDataAO" />

    <EditText
        android:id="@+id/etDataAO"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/data"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAO"
        app:layout_constraintStart_toStartOf="@+id/etNomeAO"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAO" />

    <EditText
        android:id="@+id/etAcademiaAO"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/academia"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etRecordAO"
        app:layout_constraintStart_toStartOf="@+id/etBairroAO"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAO" />

    <EditText
        android:id="@+id/etRecordAO"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/record"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAO"
        app:layout_constraintEnd_toEndOf="@+id/etAcademiaAO"
        app:layout_constraintTop_toBottomOf="@+id/etAcademiaAO" />

    <Button
        android:id="@+id/btnCadastrarAO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toTopOf="@+id/tvResultadoAO"
        app:layout_constraintEnd_toEndOf="@+id/etRecordAO"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/etRecordAO"
        app:layout_constraintTop_toBottomOf="@+id/etRecordAO" />

    <TextView
        android:id="@+id/tvResultadoAO"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarAO" />

</androidx.constraintlayout.widget.ConstraintLayout>