<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AJLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaJuvenilFragment">

    <Button
        android:id="@+id/btnCadastrarAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toTopOf="@+id/tvResultadoAJ"
        app:layout_constraintEnd_toEndOf="@+id/tvResultadoAJ"
        app:layout_constraintStart_toStartOf="@+id/tvResultadoAJ"
        app:layout_constraintTop_toBottomOf="@+id/etAnosAJ" />

    <EditText
        android:id="@+id/etNomeAJ"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="129dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataAJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataAJ"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/data"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAJ"
        app:layout_constraintStart_toStartOf="@+id/etNomeAJ"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAJ" />

    <EditText
        android:id="@+id/etBairroAJ"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAnosAJ"
        app:layout_constraintStart_toStartOf="@+id/etDataAJ"
        app:layout_constraintTop_toBottomOf="@+id/etDataAJ" />

    <EditText
        android:id="@+id/etAnosAJ"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/anos"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAJ"
        app:layout_constraintStart_toStartOf="@+id/etBairroAJ"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAJ" />

    <TextView
        android:id="@+id/tvResultadoAJ"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarAJ" />
</androidx.constraintlayout.widget.ConstraintLayout>